--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</head>
 	<body>
 		<div id="paper"></div>
-
+     <input id="value" type="text"/>
+     <button id="enter">check</button>
 
 		<script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
 		<script type="text/javascript" src="js/raphael.js"></script>
