apply flat ui for the game - initial commit

--- a/index.html
+++ b/index.html
@@ -1,18 +1,52 @@
 <!DOCTYPE html-->
 <html>
-	<head>
-		<title>pro games</title>
+<head>
+	<title>pro games</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/flat-ui.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/progames.css"></head>
+<body>
+	<header style="padding-bottom:32px;">
 
-		<link rel="stylesheet" type="text/css" href="css/progames.css">
-	</head>
-	<body>
-		<div id="paper"></div>
-     <input id="value" type="text"/>
-     <button id="enter">check</button>
+		<div class="container" style="padding-top:20px">
+			<div class="row">
+				<div class="span8">
+					<a href="">
+						<img src="images/icons/Retina-Ready@1x.png"></a>
+					<a style="padding-left:10px;" href="">how it works</a>
+					<a style="padding-left:10px;" href="">user stories</a>
+				</div>
+				<div class="span4" style="padding-top:7px">
+					<ul class="nav nav-pills">
+						<!-- <li class="footer">
+						<a href="">"user stories"</a>
+					</li>
+					-->
+					<li class="span2">
+						<button class="btn btn-large btn-primary">start training</button>
+					</li>
+					<li>
+						<button class="btn btn-large">sign in</button>
+					</li>
+				</ul>
+			</div>
+		</div>
 
-		<script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
-		<script type="text/javascript" src="js/raphael.js"></script>
-		<script type="text/javascript" src="js/progames.js"></script>
-		
-	</body>
+	</div>
+
+</header>
+<div id="paper" style="background-color: #ECF0F1;"></div>
+<div class="container">
+	<div class="span12 text-center row">
+		<input class="span2" id="value" type="text"/>
+		<button class="btn btn-large btn-primary span2" id="enter">check</button>
+	</div>
+</div>
+
+<script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
+<script type="text/javascript" src="js/raphael.js"></script>
+<script type="text/javascript" src="js/progames.js"></script>
+<script src="js/bootstrap.min.js"></script>
+</body>
+
 </html>
