--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 	<title>pro games</title>
-	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/flat-ui.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/progames.css"></head>
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/progames.css">
+	<link href="css/flat-ui.css" rel="stylesheet"></head>
 <body>
 	<header style="padding-bottom:32px;">
 
@@ -35,18 +35,21 @@
 	</div>
 
 </header>
-<div id="paper" style="background-color: #ECF0F1;"></div>
-<div class="container">
-	<div class="span12 text-center row">
-		<input class="span2" id="value" type="text"/>
-		<button class="btn btn-large btn-primary span2" id="enter">check</button>
-	</div>
-</div>
 
-<script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
-<script type="text/javascript" src="js/raphael.js"></script>
-<script type="text/javascript" src="js/progames.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<div class="container" style="padding-top: 30px;">
+	<div id="paper" style="background-color: #ECF0F1;"></div>
+	<div class="span12 row" style="padding-top: 20px;">
+		
+			<input style="height: 45px; margin-bottom: 0" type="text" id="value" placeholder="type in result">
+			<button class="btn btn-large btn-primary" id="enter">check</button>
+		</div>
+	</div>
+		
+
+		<script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
+		<script type="text/javascript" src="js/raphael.js"></script>
+		<script type="text/javascript" src="js/progames.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 </body>
 
-</html>
+	</html>
