--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </header>
 
 <div class="container" style="padding-top: 30px;">
-	<div id="paper" style="background-color: #ECF0F1;"></div>
+	<div id="paper" style="backg1round-color: #ECF0F1;"></div>
 	<div class="span12 row" style="padding-top: 20px;">
 		
 			<input style="height: 45px; margin-bottom: 0" type="text" id="value" placeholder="type in result">
